--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,102 @@
-select:disabled , input:disabled{
-    background-color: #323334 !important;
-    color: #474747 !important;
-    border-color: #474747 !important;
-    opacity: .5 !important;
+select:disabled,
+input:disabled {
+  background-color: #323334 !important;
+  color: #474747 !important;
+  border-color: #474747 !important;
+  opacity: 0.5 !important;
+}
+input#valFormFinanciar {
+  padding-left: 30px;
+  letter-spacing: 3px;
+}
+.drag__bar {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+
+.drag__bar:hover {
+  opacity: 1;
+}
+
+.drag__bar::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background: #a4f3eb;
+  cursor: pointer;
+  box-shadow: 0px 0px 11px 8px rgba(0, 0, 0, 0.26);
+  background: url(https://www.flaticon.com/svg/vstatic/svg/59/59089.svg?token=exp=1614064733~hmac=a6f0cce2214fdb52e7df9eec24006427)
+    #75b4c3;
+  background-size: 45%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.drag__bar::-moz-range-thumb {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background: #a4f3eb;
+  cursor: pointer;
+  box-shadow: 0px 0px 11px 8px rgba(0, 0, 0, 0.26);
+  background: url(https://www.flaticon.com/svg/vstatic/svg/59/59089.svg?token=exp=1614064733~hmac=a6f0cce2214fdb52e7df9eec24006427)
+    #75b4c3;
+  background-size: 45%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.signoPesos {
+  position: absolute;
+  margin-top: -31px;
+  font-size: 17px;
+  margin-left: 15px;
+}
+.puntuacionMiles {
+  display: none;
+  position: absolute;
+  margin-top: -35px;
+  font-size: 20px;
+}
+.puntuacionMiles.cuatro {
+  display: block;
+  margin-left: 51px;
+}
+.puntuacionMiles.cinco {
+  display: block;
+  margin-left: 51px;
+}
+.puntuacionMiles.seis {
+  display: block;
+  margin-left: 63px;
+}
+.puntuacionMiles.siete {
+  display: block;
+  margin-left: 74px;
+}
+.puntuacionMiles.ocho {
+  display: block;
+  margin-left: 87px;
+}
+.puntuacionMillones {
+  display: none;
+  position: absolute;
+  margin-top: -35px;
+  font-size: 20px;
+}
+.puntuacionMillones.siete {
+  display: block;
+  margin-left: 39px;
+}
+.puntuacionMillones.ocho {
+  display: block;
+  margin-left: 51px;
 }
